<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:visibility="visible"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="true"
        android:backgroundTint="@color/card_background"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="93dp"
        android:layout_height="36dp"
        android:text="@string/register"
        android:textColor="@color/card_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.146" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="true"
        android:backgroundTint="@color/card_background"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
        android:textColor="#01AA6F"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="true"
        android:backgroundTint="@color/card_background"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        android:fontFamily="sans-serif" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <ImageButton
        android:id="@+id/passwordToggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        android:padding="8dp"
        app:tint="@color/card_background"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:srcCompat="@drawable/visibility_off_24" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="true"
        android:backgroundTint="@color/card_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        android:fontFamily="sans-serif" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageButton
        android:id="@+id/confirmPasswordToggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        android:padding="8dp"
        app:tint="@color/card_background"
        app:layout_constraintBottom_toBottomOf="@+id/editTextConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextConfirmPassword"
        app:srcCompat="@drawable/visibility_off_24" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/card_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="43dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#01AA6F"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>