<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <Button
        android:id="@+id/back_btn2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="197dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:text="@string/change_password"
        android:textColor="@color/card_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="177dp"
        android:contentDescription="@string/password_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/lock_open_48px"
        app:tint="#01AA6F" />

    <EditText
        android:id="@+id/editTextCurrentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="true"
        android:backgroundTint="@color/card_background"
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/currentPasswordToggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCurrentPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextCurrentPassword"
        app:srcCompat="@drawable/visibility_off_24"
        app:tint="@color/card_background" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="true"
        android:backgroundTint="@color/card_background"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCurrentPassword" />

    <ImageButton
        android:id="@+id/newPasswordToggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextNewPassword"
        app:srcCompat="@drawable/visibility_off_24"
        app:tint="@color/card_background" />

    <EditText
        android:id="@+id/editTextConfirmPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="true"
        android:backgroundTint="@color/card_background"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

    <ImageButton
        android:id="@+id/confirmPassToggle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextConfirmPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextConfirmPass"
        app:srcCompat="@drawable/visibility_off_24"
        app:tint="@color/card_background" />

    <Button
        android:id="@+id/buttonConfirmChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/confirm_change"
        android:textColor="#3E2723"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPass"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>